kubernetes/main/apps/technitium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium
  labels:
    app: technitium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: technitium
  template:
    metadata:
      labels:
        app: technitium
    spec:
      containers:
        - name: technitium-dns
          image: technitium/dns-server:13.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53 # DNS port
            - containerPort: 443 # DNS-over-HTTPS
            - containerPort: 5380 # Web console (HTTP)
            - containerPort: 53443 # Web console (HTTPS)
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 1Gi
            limits:
              memory: 1Gi
              ephemeral-storage: 1Gi
          volumeMounts:
            - name: config
              mountPath: /etc/dns
      securityContext:
        sysctls:
          - name: net.ipv4.ip_local_port_range
            value: "1024 65000"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: technitium-config-pvc
