kubernetes/main/apps/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  labels:
    app: technitium
spec:
  selector:
    app: technitium
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: web-http
      protocol: TCP
      port: 180
      targetPort: 5380
    - name: web-https
      protocol: TCP
      port: 1443
      targetPort: 53443
    - name: metrics
      protocol: TCP
      port: 4001
      targetPort: 4001
  type: LoadBalancer
